--- a/dev/_modules/smac/utils/io/cmd_reader.html
+++ b/dev/_modules/smac/utils/io/cmd_reader.html
@@ -294,6 +294,8 @@
         <span class="n">req_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--mode&quot;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="s2">&quot;SMAC&quot;</span><span class="p">,</span>
                               <span class="n">choices</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;SMAC&quot;</span><span class="p">,</span> <span class="s2">&quot;ROAR&quot;</span><span class="p">,</span> <span class="s2">&quot;EPILS&quot;</span><span class="p">],</span>
                               <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Configuration mode.&quot;</span><span class="p">)</span>
+        <span class="n">req_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--restore_state&quot;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+                              <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Path to dir with SMAC-files.&quot;</span><span class="p">)</span>
         <span class="n">req_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--warmstart_runhistory&quot;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                               <span class="n">nargs</span><span class="o">=</span><span class="s2">&quot;*&quot;</span><span class="p">,</span>
                               <span class="n">help</span><span class="o">=</span><span class="n">SUPPRESS</span><span class="p">)</span>  <span class="c1"># list of runhistory dump files</span>
@@ -301,7 +303,7 @@
         <span class="c1"># pcs and feature space has to be identical to --scenario_file</span>
         <span class="n">req_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--warmstart_scenario&quot;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                               <span class="n">nargs</span><span class="o">=</span><span class="s2">&quot;*&quot;</span><span class="p">,</span>
-                              <span class="n">help</span><span class="o">=</span><span class="n">SUPPRESS</span><span class="p">)</span>  
+                              <span class="n">help</span><span class="o">=</span><span class="n">SUPPRESS</span><span class="p">)</span>
         <span class="n">req_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--warmstart_incumbent&quot;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                               <span class="n">nargs</span><span class="o">=</span><span class="s2">&quot;*&quot;</span><span class="p">,</span>
                               <span class="n">help</span><span class="o">=</span><span class="n">SUPPRESS</span><span class="p">)</span><span class="c1"># list of trajectory dump files, </span>
