--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -602,6 +602,8 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="apidoc/smac.stats.stats.html#smac.stats.stats.Stats.load">load() (smac.stats.stats.Stats method)</a>
+</li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.load_json">load_json() (smac.runhistory.runhistory.RunHistory method)</a>
 </li>
       <li><a href="apidoc/smac.optimizer.local_search.html#smac.optimizer.local_search.LocalSearch">LocalSearch (class in smac.optimizer.local_search)</a>
@@ -766,6 +768,8 @@
 </li>
       <li><a href="apidoc/smac.utils.io.traj_logging.html#smac.utils.io.traj_logging.TrajLogger.read_traj_aclib_format">read_traj_aclib_format() (smac.utils.io.traj_logging.TrajLogger static method)</a>
 </li>
+      <li><a href="apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state">restore_state() (smac.smac_cli.SMACCLI method)</a>
+</li>
       <li><a href="apidoc/smac.epm.rf_with_instances.html#smac.epm.rf_with_instances.RandomForestWithInstances.rf">rf (smac.epm.rf_with_instances.RandomForestWithInstances attribute)</a>
 </li>
       <li><a href="apidoc/smac.epm.rf_with_instances.html#smac.epm.rf_with_instances.RandomForestWithInstances.rf_opts">rf_opts (smac.epm.rf_with_instances.RandomForestWithInstances attribute)</a>
@@ -846,6 +850,8 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="apidoc/smac.stats.stats.html#smac.stats.stats.Stats.save">save() (smac.stats.stats.Stats method)</a>
+</li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.save_json">save_json() (smac.runhistory.runhistory.RunHistory method)</a>
 </li>
       <li><a href="apidoc/smac.epm.base_epm.html#smac.epm.base_epm.AbstractEPM.scaler">scaler (smac.epm.base_epm.AbstractEPM attribute)</a>
@@ -984,9 +990,11 @@
 </li>
       <li><a href="apidoc/smac.facade.smac_facade.html#smac.facade.smac_facade.SMAC.solver">solver (smac.facade.smac_facade.SMAC attribute)</a>
 </li>
-      <li><a href="apidoc/smac.tae.execute_func.html#smac.tae.execute_func.AbstractTAFunc.start">start() (smac.tae.execute_func.AbstractTAFunc method)</a>
+      <li><a href="apidoc/smac.optimizer.smbo.html#smac.optimizer.smbo.SMBO.start">start() (smac.optimizer.smbo.SMBO method)</a>
 
       <ul>
+        <li><a href="apidoc/smac.tae.execute_func.html#smac.tae.execute_func.AbstractTAFunc.start">(smac.tae.execute_func.AbstractTAFunc method)</a>
+</li>
         <li><a href="apidoc/smac.tae.execute_func.html#smac.tae.execute_func.ExecuteTAFuncArray.start">(smac.tae.execute_func.ExecuteTAFuncArray method)</a>
 </li>
         <li><a href="apidoc/smac.tae.execute_func.html#smac.tae.execute_func.ExecuteTAFuncDict.start">(smac.tae.execute_func.ExecuteTAFuncDict method)</a>
