--- a/dev/_modules/smac/facade/func_facade.html
+++ b/dev/_modules/smac/facade/func_facade.html
@@ -305,7 +305,7 @@
         <span class="n">parameter</span> <span class="o">=</span> <span class="n">UniformFloatHyperparameter</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s2">&quot;x</span><span class="si">%d</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="n">idx</span> <span class="o">+</span> <span class="mi">1</span><span class="p">),</span>
                                                <span class="n">lower</span><span class="o">=</span><span class="n">lower_bound</span><span class="p">,</span>
                                                <span class="n">upper</span><span class="o">=</span><span class="n">upper_bound</span><span class="p">,</span>
-                                               <span class="n">default</span><span class="o">=</span><span class="n">x0</span><span class="p">[</span><span class="n">idx</span><span class="p">])</span>
+                                               <span class="n">default_value</span><span class="o">=</span><span class="n">x0</span><span class="p">[</span><span class="n">idx</span><span class="p">])</span>
         <span class="n">cs</span><span class="o">.</span><span class="n">add_hyperparameter</span><span class="p">(</span><span class="n">parameter</span><span class="p">)</span>
 
     <span class="c1"># Create target algorithm runner</span>
